Run python from java